# raspberry-pi-pico-FPGA

./: .gitignore  CMakePresets.json  OV7670_PIN MAP.xlsx  README.md  command_list.txt  output.txt  raw data copy.txt
CameraViewer_GUI/: CamerViewer.py  CameraViewer.ui  CameraViewer_ui.py  Worker.py  img_show.py
SIMD_verilog/: ALU.v  MAC.v  MAC_array.v  MBM.bsf  MBM.v  PG.v  PISO.bsf  PISO.v  SIMD.qpf  SIMD.qsf  SIMD.v  SIMD_CNN.v  SIMD_nativelink_simulation.rpt  SIMD_v1.v  SIPO.bsf  SIPO.v  SPI_SIMD.qsys  SPI_SIMD.sopcinfo  TOP.bdf  TOP.v  Waveform.vwf  arithmatic.v  code.v  floatingPoint.qsys  floatingPoint.sopcinfo  operand_reg.v  operand_reg_arr.v  partial.v  tb_TOP.v  tb_simd.v
SIMD_verilog/SPI_SIMD/: SPI_SIMD.bsf  SPI_SIMD.cmp  SPI_SIMD.csv  SPI_SIMD.spd  SPI_SIMD_bb.v  SPI_SIMD_generation.rpt  SPI_SIMD_inst.v  SPI_SIMD_inst.vhd
SIMD_verilog/SPI_SIMD/simulation/: SPI_SIMD.sip
SIMD_verilog/SPI_SIMD/synthesis/: SPI_SIMD.debuginfo  SPI_SIMD.qip  SPI_SIMD.v
SIMD_verilog/floatingPoint/: floatingPoint.bsf  floatingPoint.cmp  floatingPoint.csv  floatingPoint.ppf  floatingPoint.spd  floatingPoint_bb.v  floatingPoint_generation.rpt  floatingPoint_inst.v  floatingPoint_inst.vhd
camera_Project/: CMakeLists.txt  RGB_IMG_show.ipynb  SIMD_test.cpp  camera_project.cpp  camera_project_8bit.cpp  camera_project_PIO.cpp  camera_project_multicore.cpp  image_read.py  img.txt  img_show.ipynb  img_show.py  resolution_config_info.txt
libs/: Array.cpp  Array.h  BUS_control.cpp  BUS_control.h  ImageProcessing.cpp  ImageProcessing.h  PIO_setting.cpp  PIO_setting.h  SIMD.cpp  SIMD.h  TFT.cpp  TFT.h  TFT_LCD_reg.h  TFT_font.h  display_control.cpp  display_control.h  myfunc.cpp  myfunc.h  ov7670.cpp  ov7670.h  ov7670_reg.h  read_ov7670.pio
pico-sdk/: pico_sdk_init.cmake
test/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h  myfunc.cpp  myfunc.h  ov7670.cpp  ov7670.h  ov7670_reg.h  test.c
(+21 files in other folders)
