cmake_minimum_required(VERSION 3.0.0)
include(pico_sdk_import.cmake)

set(projname "test")

project(${projname} C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

add_executable(${projname}
        test.c
        )
pico_enable_stdio_usb(${projname} 1)
pico_enable_stdio_uart(${projname} 0)
target_link_libraries(${projname} pico_stdlib pico_stdio_usb)
pico_add_extra_outputs(${projname})


